--- a/.github/workflows/Mergereportjobs.yml
+++ b/.github/workflows/Mergereportjobs.yml
@@ -24,8 +24,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        shardIndex: [1, 2, 3, 4, 5]
-        shardTotal: [5]
+        shardIndex: [1, 2, 3, 4, 5, 6]
+        shardTotal: [6]
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
