--- a/.github/workflows/Mergereportjobs.yml
+++ b/.github/workflows/Mergereportjobs.yml
@@ -20,7 +20,7 @@ on:
 jobs:
   playwright-tests:
     timeout-minutes: 60
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     strategy:
       fail-fast: false
       matrix:
