--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -18,6 +18,11 @@ jobs:
   test:
     timeout-minutes: 10
     runs-on: windows-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        shardIndex: [1, 2]
+        shardTotal: [2]
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
@@ -32,21 +37,10 @@ jobs:
     - name: Install Allure Command Line
       run: npm install -g allure-commandline --save-dev
     - name: Run Playwright tests
-      run: npx playwright test
-    - name: Generate Allure report
-      run: allure generate allure-results -o allure-report --clean
-    # - name: open the report
-    #   run: allure open allure-report   can't mention
+      run: npx playwright test --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
     - uses: actions/upload-artifact@v4
-
-      if: always()
+      if: ${{ !cancelled() }}
       with:
-        name: allure-report
-        path: allure-report/
+        name: playwright-report
+        path: playwright-report/
         retention-days: 30
-    - uses: actions/upload-artifact@v4
-      if: always()
-      with:
-       name: playwright-report
-       path: playwright-report/
-       retention-days: 60
