--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -30,6 +30,8 @@ jobs:
         node-version: lts/*
     - name: Install dependencies
       run: npm ci
+    - name: Clean old report (if any)
+      run: rm -rf playwright-report
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
