--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -30,8 +30,11 @@ jobs:
         node-version: lts/*
     - name: Install dependencies
       run: npm ci
-    - name: Clean old report (if any)
-      run: rm -rf playwright-report
+    - name: Clean old Playwright report (if exists)
+      run: |
+        if (Test-Path "playwright-report") {
+          Remove-Item "playwright-report" -Recurse -Force
+        }
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
